--- a/proyecto-01/index.html
+++ b/proyecto-01/index.html
@@ -5,30 +5,36 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  https://git.sr.ht/~anntnzrb/_nixrice
-  <!-- icon library -->
+
+  <!-- css -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
+  <!-- icon -->
   <link href="style.css" rel="stylesheet" type="text/css" />
+
+  <!-- font -->
+  <link href="https://fonts.googleapis.com/css2?family=Inconsolata:wght@300&display=swap" rel="stylesheet">
 
   <title>Mi página</title>
 </head>
 
 <body>
-  <h1>annt's foli'</h1>
+  <h1>annt's foli</h1>
 
-  <p>Esta página contiene el portafolio de Juan Antonio González Orbe.</p>
-
-  <h2>A small foobar desc</h2>
-
-  <p><em>A longer foobar desc.</em></p>
+  <nav class="navbar">
+    <ul>
+      <li><a href="#">Inicio</a>
+      <li><a href="#">Contacto</a>
+    </ul>
+  </nav>
 
   <!-- media icons -->
-  <a href="https://linux.org/" class="fa fa-twitter"></a>
+  <a href="https://linux.org/" class="fa fa-code"></a>
 
-   <br>
-   <input type="radio" name="test" value="foo" checked>Foo<br>
-   <input type="radio" name="test" value="bar">Bar<br>
-   <input type="radio" name="test" value="baz">Baz<br>
+  <br>
+  <input type="radio" name="test" value="foo" checked>Foo<br>
+  <input type="radio" name="test" value="bar">Bar<br>
+  <input type="radio" name="test" value="baz">Baz<br>
 
 </body>
 
