--- a/proyecto-01/index.html
+++ b/proyecto-01/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-
+  https://git.sr.ht/~anntnzrb/_nixrice
   <!-- icon library -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <link href="style.css" rel="stylesheet" type="text/css" />
@@ -14,7 +14,10 @@
 </head>
 
 <body>
-  <h1>Foobar</h1>
+  <h1>annt's foli'</h1>
+
+  <p>Esta página contiene el portafolio de Juan Antonio González Orbe.</p>
+
   <h2>A small foobar desc</h2>
 
   <p><em>A longer foobar desc.</em></p>
