avance: Fri Jun 3 @ 17:53 2022

--- a/proyecto-01/index.html
+++ b/proyecto-01/index.html
@@ -13,28 +13,42 @@
   <link href="style.css" rel="stylesheet" type="text/css" />
 
   <!-- font -->
-  <link href="https://fonts.googleapis.com/css2?family=Inconsolata:wght@300&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Inconsolata&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Josefin+Slab&display=swap" rel="stylesheet">
 
   <title>Mi página</title>
 </head>
 
 <body>
-  <h1>annt's foli</h1>
+  <div class="main-div">
+  <h1>annt's folio</h1>
 
-  <nav class="navbar">
+  <!-- ******************************************************************** -->
+  <!-- Sección #1 (Intro) -->
+  <!-- ******************************************************************** -->
+
+  <section class="sec-intro">
+    <div>
+      <h2 id="s1-introduction">Intro</h2>
+      <p>
+      Mi nombre es Juan Antonio González Orbe. Actualmente estudio en la
+      <em>Escuela Superior Politénica del Literal (ESPOL)</em>.
+    </p>
+    <h3 id="s1-introduction">Acerca de...</h3>
     <ul>
-      <li><a href="#">Inicio</a>
-      <li><a href="#">Contacto</a>
+      <li><b><a href="https://github.com/anntnzrb">🖥️ Repositorio GitHub</a></li></b>
+      <li><b><a href="https://git.sr.ht/~anntnzrb">📜 Repositorio proyectos personales</a></li></b>
+      <li><b><a href="#aportes">💸 Aportes</a></li></b>
+      <li><b><a href="#contacto">📧 Contacto</a></li></b>
     </ul>
-  </nav>
+    </div>
+    <div>
+      <figure class="perfil">
+      <img src="assets/pix/gigachad.jpg" alt="Mi Foto">
+    </figure>
+    </div>
+  </section>
 
-  <!-- media icons -->
-  <a href="https://linux.org/" class="fa fa-code"></a>
-
-  <br>
-  <input type="radio" name="test" value="foo" checked>Foo<br>
-  <input type="radio" name="test" value="bar">Bar<br>
-  <input type="radio" name="test" value="baz">Baz<br>
 
 </body>
 
