avance: sección intro

--- a/proyecto-01/index.html
+++ b/proyecto-01/index.html
@@ -49,6 +49,14 @@
     </div>
   </section>
 
+  <!-- ******************************************************************** -->
+  <!-- Sección #2 (Intro) -->
+  <!-- ******************************************************************** -->
+
+  <section class="sec-aportes">
+   <h2>Listas</h2>
+  </section>
+
 
 </body>
 
