--- a/proyecto-01/index.html
+++ b/proyecto-01/index.html
@@ -16,7 +16,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Inconsolata&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Josefin+Slab&display=swap" rel="stylesheet">
 
-  <title>Mi página</title>
+  <title>annt's folio'</title>
 </head>
 
 <body>
@@ -50,7 +50,7 @@
   </section>
 
   <!-- ******************************************************************** -->
-  <!-- Sección #2 (Intro) -->
+  <!-- Sección #2 (TODO) -->
   <!-- ******************************************************************** -->
 
   <section class="sec-aportes">
