avance: sección aportes

--- a/proyecto-01/index.html
+++ b/proyecto-01/index.html
@@ -57,6 +57,20 @@
    <h2>Listas</h2>
   </section>
 
+  <!-- ******************************************************************** -->
+  <!-- Sección #X (Aportes) -->
+  <!-- ******************************************************************** -->
+
+  <section class="sec-aportes" id="aportes">
+   <h2>Aportes</h2>
+   <p>Si aprecias mi trabajo considera realizar una aportación monetaria a
+     partir de los suguientes métodos:</p>
+   <h3>Métodos de pago:</h3>
+   <div>
+     <a href="https://paypal.com" class="fa fa-cc-paypal"></a>
+     <a href="https://bitcoin.com" class="fa fa-btc"></a>
+   </div>
+  </section>
 
 </body>
 
