avance: sección contacto (base)

--- a/proyecto-01/index.html
+++ b/proyecto-01/index.html
@@ -72,6 +72,14 @@
    </div>
   </section>
 
+  <!-- ******************************************************************** -->
+  <!-- Sección #Y (Contacto) -->
+  <!-- ******************************************************************** -->
+
+  <section class="sec-aportes" id="contacto">
+   <h2>Contacto</h2>
+  </section>
+  </div>
 </body>
 
 </html>
