--- a/proyecto-01/index.html
+++ b/proyecto-01/index.html
@@ -64,7 +64,7 @@
   <section class="sec-aportes" id="aportes">
    <h2>Aportes</h2>
    <p>Si aprecias mi trabajo considera realizar una aportación monetaria a
-     partir de los suguientes métodos:</p>
+     partir de los siguientes métodos:</p>
    <h3>Métodos de pago:</h3>
    <div>
      <a href="https://paypal.com" class="fa fa-cc-paypal"></a>
