--- a/proyecto-01/index.html
+++ b/proyecto-01/index.html
@@ -44,7 +44,8 @@
     </div>
     <div>
       <figure class="perfil">
-      <img src="assets/pix/gigachad.jpg" alt="Mi Foto">
+        <img src="https://c.tenor.com/epNMHGvRyHcAAAAd/gigachad-chad.gif" alt="Mi Foto" >
+      <figcaption>Auto-Retrato(s)</figcaption>
     </figure>
     </div>
   </section>
