avance: mapa embebido

--- a/proyecto-01/index.html
+++ b/proyecto-01/index.html
@@ -106,6 +106,18 @@
         <input type="submit" value="Enviar">
       </div>
     </form>
+
+    <br><br>
+
+<div class="mapouter">
+  <legend>Si estás en el campus de <em>ESPOL</em>, puedes dirigirte a mi oficina:</legend>
+  <div class="gmap_canvas">
+    <iframe id="gmap_canvas"
+      src="https://maps.google.com/maps?q=Santiago%20Bernabeu&t=&z=13&ie=UTF8&iwloc=&output=embed" frameborder="0"
+      scrolling="no" marginheight="0" marginwidth="0"></iframe><br>
+  </div>
+</div>
+
 </section>
   </div>
 </body>
