avance: sección experiencias (tablas)

--- a/proyecto-01/index.html
+++ b/proyecto-01/index.html
@@ -51,11 +51,61 @@
   </section>
 
   <!-- ******************************************************************** -->
-  <!-- Sección #2 (TODO) -->
+  <!-- Sección #2 (Experiencias) -->
   <!-- ******************************************************************** -->
 
-  <section class="sec-aportes">
-   <h2>Listas</h2>
+  <section class="sec-experienca" id="experiencia">
+    <h2>Experiencia ✒️</h2>
+    <p>La siguiente tabla muestra el nivel (1-3) de familiaridad que
+      tengo con los siguientes lenguages de programación:</p>
+    <div class="div-tabla-exp">
+      <table>
+        <tbody>
+          <tr>
+            <td><em>Lenguaje / Nivel</em></td>
+            <td>I</td>
+            <td>II</td>
+            <td>III</td>
+          </tr>
+          <tr>
+            <td>Java</td>
+            <td></td>
+            <td></td>
+            <td>✅</td>
+          </tr>
+          <tr>
+            <td>C</td>
+            <td></td>
+            <td>✅</td>
+            <td></td>
+          </tr>
+          <tr>
+            <td>Python</td>
+            <td></td>
+            <td>✅</td>
+            <td></td>
+          </tr>
+          <tr>
+            <td>Shell</td>
+            <td></td>
+            <td></td>
+            <td>✅</td>
+          </tr>
+          <tr>
+            <td>Lisp</td>
+            <td></td>
+            <td>✅</td>
+            <td></td>
+          </tr>
+          <tr>
+            <td>Haskell</td>
+            <td>✅</td>
+            <td></td>
+            <td></td>
+          </tr>
+        </tbody>
+      </table>
+    </div>
   </section>
 
   <!-- ******************************************************************** -->
