--- a/proyecto-01/index.html
+++ b/proyecto-01/index.html
@@ -29,7 +29,7 @@
 
   <section class="sec-intro">
     <div>
-      <h2 id="s1-introduction">Intro</h2>
+      <h2 id="s1-introduction">Intro 🧭</h2>
       <p>
       Mi nombre es Juan Antonio González Orbe. Actualmente estudio en la
       <em>Escuela Superior Politénica del Literal (ESPOL)</em>.
@@ -38,6 +38,7 @@
     <ul>
       <li><b><a href="https://github.com/anntnzrb">🖥️ Repositorio GitHub</a></li></b>
       <li><b><a href="https://git.sr.ht/~anntnzrb">📜 Repositorio proyectos personales</a></li></b>
+      <li><b><a href="#experiencia">📚 Experiencia</a></li></b>
       <li><b><a href="#aportes">💸 Aportes</a></li></b>
       <li><b><a href="#contacto">📧 Contacto</a></li></b>
     </ul>
@@ -113,7 +114,7 @@
   <!-- ******************************************************************** -->
 
   <section class="sec-aportes" id="aportes">
-   <h2>Aportes</h2>
+   <h2>Aportes 🫰</h2>
    <p>Si aprecias mi trabajo considera realizar una aportación monetaria a
      partir de los siguientes métodos:</p>
    <h3>Métodos de pago:</h3>
@@ -128,7 +129,7 @@
   <!-- ******************************************************************** -->
 
   <section class="sec-aportes" id="contacto">
-    <h2>Contacto</h2>
+    <h2>Contacto 📇</h2>
     <p>En el siguiente <i>form</i> puedes enviar algún comentario o
       sugerencia. De hecho, si la página tiene algún error, te pido de favor que
       me lo hagas saber para así arreglar dicho problema.</p>
@@ -160,7 +161,7 @@
     <br><br>
 
 <div class="mapouter">
-  <legend>Si estás en el campus de <em>ESPOL</em>, puedes dirigirte a mi oficina:</legend>
+  <legend>🗺️ Si estás en el campus de <em>ESPOL</em>, puedes dirigirte a mi oficina:</legend>
   <div class="gmap_canvas">
     <iframe id="gmap_canvas"
       src="https://maps.google.com/maps?q=Santiago%20Bernabeu&t=&z=13&ie=UTF8&iwloc=&output=embed" frameborder="0"
