--- a/proyecto-01/index.html
+++ b/proyecto-01/index.html
@@ -122,6 +122,14 @@
      <a href="https://paypal.com" class="fa fa-cc-paypal"></a>
      <a href="https://bitcoin.com" class="fa fa-btc"></a>
    </div>
+   <div>
+     <figure class="perfil">
+      <img
+        src="https://upload.wikimedia.org/wikipedia/commons/thumb/d/d0/QR_code_for_mobile_English_Wikipedia.svg/1200px-QR_code_for_mobile_English_Wikipedia.svg.png"
+            width="300rem">
+       <figcaption>💵 Monero QR Code</figcaption>
+     </figure>
+   </div>
   </section>
 
   <!-- ******************************************************************** -->
