avance: sección experiencias

--- a/proyecto-01/index.html
+++ b/proyecto-01/index.html
@@ -100,6 +100,12 @@
           </tr>
           <tr>
             <td>Haskell</td>
+            <td></td>
+            <td>✅</td>
+            <td></td>
+          </tr>
+          <tr>
+            <td>JavaScript</td>
             <td>✅</td>
             <td></td>
             <td></td>
@@ -107,6 +113,21 @@
         </tbody>
       </table>
     </div>
+
+    <p>Aquí algunos de mis intereses, ninguno en orden particular:</p>
+
+    <ul class="exp-tags">
+      <li><a href="https://es.wikipedia.org/wiki/GNU/Linux">Linux</a></li>
+      <li><a href="https://www.shellscript.sh/">Shell scripting</a></li>
+      <li><a href="https://en.wikipedia.org/wiki/Functional_programming">Functional Programming</a></li>
+      <li><a href="https://www.gnu.org/software/emacs/">GNU Emacs</a></li>
+      <li><a href="https://www.vim.org/">vi (support Uganda!)</a></li>
+      <li><a href="sucless.org">suckless</a></li>
+      <li><a href="">Fútbol</a></li>
+      <li><a href="">Atletismo</a></li>
+      <li><a href="">Anti-Anime</a></li>
+      <li><a href="">Cafeína</a></li>
+    </ul>
   </section>
 
   <!-- ******************************************************************** -->
