--- a/proyecto-01/index.html
+++ b/proyecto-01/index.html
@@ -14,7 +14,7 @@
 
   <!-- font -->
   <link href="https://fonts.googleapis.com/css2?family=Inconsolata&display=swap" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css2?family=Josefin+Slab&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@200&display=swap" rel="stylesheet">
 
   <title>annt's folio'</title>
 </head>
