--- a/proyecto-01/index.html
+++ b/proyecto-01/index.html
@@ -7,10 +7,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <!-- css -->
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <link href="style.css" rel="stylesheet" type="text/css" />
+  <link href="responsive.css" rel="stylesheet" type="text/css" />
 
   <!-- icon -->
-  <link href="style.css" rel="stylesheet" type="text/css" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
   <!-- font -->
   <link href="https://fonts.googleapis.com/css2?family=Inconsolata&display=swap" rel="stylesheet">
@@ -31,23 +32,23 @@
     <div>
       <h2 id="s1-introduction">Intro 🧭</h2>
       <p>
-      Mi nombre es Juan Antonio González Orbe. Actualmente estudio en la
-      <em>Escuela Superior Politénica del Literal (ESPOL)</em>.
-    </p>
-    <h3 id="s1-introduction">Acerca de...</h3>
-    <ul>
-      <li><b><a href="https://github.com/anntnzrb">🖥️ Repositorio GitHub</a></li></b>
-      <li><b><a href="https://git.sr.ht/~anntnzrb">📜 Repositorio proyectos personales</a></li></b>
-      <li><b><a href="#experiencia">📚 Experiencia</a></li></b>
-      <li><b><a href="#aportes">💸 Aportes</a></li></b>
-      <li><b><a href="#contacto">📧 Contacto</a></li></b>
-    </ul>
+        Mi nombre es Juan Antonio González Orbe. Actualmente estudio en la
+        <em>Escuela Superior Politénica del Literal (ESPOL)</em>.
+      </p>
+      <h3 id="s1-introduction">Acerca de...</h3>
+      <ul>
+        <li><b><a href="https://github.com/anntnzrb">🖥️ Repositorio GitHub</a></li></b>
+        <li><b><a href="https://git.sr.ht/~anntnzrb">📜 Repositorio proyectos personales</a></li></b>
+        <li><b><a href="#experiencia">📚 Experiencia</a></li></b>
+        <li><b><a href="#aportes">💸 Aportes</a></li></b>
+        <li><b><a href="#contacto">📧 Contacto</a></li></b>
+      </ul>
     </div>
-    <div>
+    <div class="div-perfil">
       <figure class="perfil">
         <img src="https://c.tenor.com/epNMHGvRyHcAAAAd/gigachad-chad.gif" alt="Mi Foto" >
-      <figcaption>Auto-Retrato(s)</figcaption>
-    </figure>
+        <figcaption>Auto-Retrato(s)</figcaption>
+      </figure>
     </div>
   </section>
 
