--- a/proyecto-01/index.html
+++ b/proyecto-01/index.html
@@ -25,7 +25,7 @@
   <h1>annt's folio</h1>
 
   <!-- ******************************************************************** -->
-  <!-- Sección #1 (Intro) -->
+  <!-- Sección Intro -->
   <!-- ******************************************************************** -->
 
   <section class="sec-intro">
@@ -53,7 +53,7 @@
   </section>
 
   <!-- ******************************************************************** -->
-  <!-- Sección #2 (Experiencias) -->
+  <!-- Sección Experiencias -->
   <!-- ******************************************************************** -->
 
   <section class="sec-experienca" id="experiencia">
@@ -132,7 +132,7 @@
   </section>
 
   <!-- ******************************************************************** -->
-  <!-- Sección #X (Aportes) -->
+  <!-- Sección Aportes -->
   <!-- ******************************************************************** -->
 
   <section class="sec-aportes" id="aportes">
@@ -155,7 +155,7 @@
   </section>
 
   <!-- ******************************************************************** -->
-  <!-- Sección #Y (Contacto) -->
+  <!-- Sección Contacto -->
   <!-- ******************************************************************** -->
 
   <section class="sec-aportes" id="contacto">
@@ -179,9 +179,9 @@
         <input type="radio" id="report" name="btns">
         <label for="report">Reporte</label><br>
       </div>
-      <div>
-        <textarea rows="5" cols="100" name="description" required>
-          </textarea>
+      <div class="div-textarea">
+        <textarea name="description" required>
+        </textarea>
       </div>
       <div>
         <input type="submit" value="Enviar">
