--- a/proyecto-01/index.html
+++ b/proyecto-01/index.html
@@ -32,17 +32,17 @@
     <div>
       <h2 id="s1-introduction">Intro 🧭</h2>
       <p>
-        Mi nombre es Juan Antonio González Orbe. Actualmente estudio en la
-        <em>Escuela Superior Politénica del Literal (ESPOL)</em>.
-      </p>
-      <h3 id="s1-introduction">Acerca de...</h3>
-      <ul>
-        <li><b><a href="https://github.com/anntnzrb">🖥️ Repositorio GitHub</a></li></b>
-        <li><b><a href="https://git.sr.ht/~anntnzrb">📜 Repositorio proyectos personales</a></li></b>
-        <li><b><a href="#experiencia">📚 Experiencia</a></li></b>
-        <li><b><a href="#aportes">💸 Aportes</a></li></b>
-        <li><b><a href="#contacto">📧 Contacto</a></li></b>
-      </ul>
+      Mi nombre es Juan Antonio González Orbe. Actualmente estudio en la
+      <em>Escuela Superior Politénica del Literal (ESPOL)</em>.
+    </p>
+    <h3>Acerca de...</h3>
+    <ul>
+      <li><b><a href="https://github.com/anntnzrb">🖥️ Repositorio GitHub</a></b></li>
+      <li><b><a href="https://git.sr.ht/~anntnzrb">📜 Repositorio proyectos personales</a></b></li>
+      <li><b><a href="#experiencia">📚 Experiencia</a></b></li>
+      <li><b><a href="#aportes">💸 Aportes</a></b></li>
+      <li><b><a href="#contacto">📧 Contacto</a></b></li>
+    </ul>
     </div>
     <div class="div-perfil">
       <figure class="perfil">
@@ -63,8 +63,8 @@
     <div class="div-tabla-exp">
       <table>
         <tbody>
-          <tr>
-            <td><em>Lenguaje / Nivel</em></td>
+          <tr class="tr-header">
+            <td>Lenguaje / Nivel</td>
             <td>I</td>
             <td>II</td>
             <td>III</td>
@@ -73,41 +73,41 @@
             <td>Java</td>
             <td></td>
             <td></td>
-            <td>✅</td>
+            <td>✓</td>
           </tr>
           <tr>
             <td>C</td>
             <td></td>
-            <td>✅</td>
+            <td>✓</td>
             <td></td>
           </tr>
           <tr>
             <td>Python</td>
             <td></td>
-            <td>✅</td>
+            <td>✓</td>
             <td></td>
           </tr>
           <tr>
             <td>Shell</td>
             <td></td>
             <td></td>
-            <td>✅</td>
+            <td>✓</td>
           </tr>
           <tr>
             <td>Lisp</td>
             <td></td>
-            <td>✅</td>
+            <td>✓</td>
             <td></td>
           </tr>
           <tr>
             <td>Haskell</td>
             <td></td>
-            <td>✅</td>
+            <td>✓</td>
             <td></td>
           </tr>
           <tr>
             <td>JavaScript</td>
-            <td>✅</td>
+            <td>✓</td>
             <td></td>
             <td></td>
           </tr>
@@ -148,7 +148,7 @@
      <figure class="perfil">
       <img
         src="https://upload.wikimedia.org/wikipedia/commons/thumb/d/d0/QR_code_for_mobile_English_Wikipedia.svg/1200px-QR_code_for_mobile_English_Wikipedia.svg.png"
-            width="300rem">
+            width="300">
        <figcaption>💵 Monero QR Code</figcaption>
      </figure>
    </div>
@@ -165,15 +165,14 @@
       me lo hagas saber para así arreglar dicho problema.</p>
     <form class="form-contacto">
       <div>
-        <label for="name">Nombre: </label>
-        <input type="text" name="name" id="nombre" required>
+        <label for="text">Nombre: </label>
+        <input type="text" name="text" id="text" required>
       </div>
       <div>
         <label for="email">E-mail: </label>
         <input type="email" name="email" id="email" required>
       </div>
       <div>
-        <legend><u>Elegir 1 de los siguientes:</u></legend>
         <input type="radio" id="comment" name="btns">
         <label for="comment">Comentario</label><br>
         <input type="radio" id="report" name="btns">
@@ -191,11 +190,11 @@
     <br><br>
 
 <div class="mapouter">
-  <legend>🗺️ Si estás en el campus de <em>ESPOL</em>, puedes dirigirte a mi oficina:</legend>
+  <p>🗺️ Si estás en el campus de <em>ESPOL</em>, puedes dirigirte a mi oficina:</p>
   <div class="gmap_canvas">
     <iframe id="gmap_canvas"
-      src="https://maps.google.com/maps?q=Santiago%20Bernabeu&t=&z=13&ie=UTF8&iwloc=&output=embed" frameborder="0"
-      scrolling="no" marginheight="0" marginwidth="0"></iframe><br>
+            src="https://maps.google.com/maps?q=Santiago%20Bernabeu&t=&z=13&ie=UTF8&iwloc=&output=embed">
+    </iframe><br>
   </div>
 </div>
 
