--- a/proyecto-01/index.html
+++ b/proyecto-01/index.html
@@ -152,6 +152,15 @@
        <figcaption>💵 Monero QR Code</figcaption>
      </figure>
    </div>
+   <div class="div-video">
+     <p>Por si necesitas crear una billetera (cuenta) de <em>Monero</em>:</p>>
+     <iframe width="560" height="315"
+             src="https://www.youtube-nocookie.com/embed/qPNxca_KMww"
+             title="YouTube video player"
+             allow="accelerometer; autoplay; clipboard-write; encrypted-media;
+                    gyroscope; picture-in-picture">
+     </iframe>
+   </div>
   </section>
 
   <!-- ******************************************************************** -->
