proyecto01: errores menores

--- a/proyecto-01/index.html
+++ b/proyecto-01/index.html
@@ -153,7 +153,7 @@
      </figure>
    </div>
    <div class="div-video">
-     <p>Por si necesitas crear una billetera (cuenta) de <em>Monero</em>:</p>>
+     <p>Por si necesitas crear una billetera (cuenta) de <em>Monero</em>:</p>
      <iframe width="560" height="315"
              src="https://www.youtube-nocookie.com/embed/qPNxca_KMww"
              title="YouTube video player"
