--- a/proyecto-02/public/index.html
+++ b/proyecto-02/public/index.html
@@ -11,10 +11,10 @@
             <table class="border-collapse table-auto w-full text-sm">
               <thead>
                 <tr>
-                  <th class="border-b dark:border-slate-600 font-medium p-4 pl-8 pt-0 pb-3 text-slate-400 dark:text-slate-200 text-left">ID</th>
-                  <th class="border-b dark:border-slate-600 font-medium p-4 pl-8 pt-0 pb-3 text-slate-400 dark:text-slate-200 text-left">Login</th>
-                  <th class="border-b dark:border-slate-600 font-medium p-4 pl-8 pt-0 pb-3 text-slate-400 dark:text-slate-200 text-left">URL</th>
-                  <th class="border-b dark:border-slate-600 font-medium p-4 pl-8 pt-0 pb-3 text-slate-400 dark:text-slate-200 text-left">Avatar URL</th>
+                  <th class="border-b dark:border-slate-600 font-bold p-4 pl-8 pt-0 pb-3 text-slate-400 dark:text-slate-200 text-left">ID</th>
+                  <th class="border-b dark:border-slate-600 font-bold p-4 pl-8 pt-0 pb-3 text-slate-400 dark:text-slate-200 text-left">Login</th>
+                  <th class="border-b dark:border-slate-600 font-bold p-4 pl-8 pt-0 pb-3 text-slate-400 dark:text-slate-200 text-left">URL</th>
+                  <th class="border-b dark:border-slate-600 font-bold p-4 pl-8 pt-0 pb-3 text-slate-400 dark:text-slate-200 text-left">Avatar URL</th>
                 </tr>
               </thead>
               <tbody id="table-id" class="bg-white dark:bg-slate-800"></tbody>
